# fastapi-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 7b5ca7b8d496_initial_migration.py  cc1fb6b21dc7_add_emailattachment.py
app/: app.py  db_models.py  dependencies.py  settings.py  utils.py
app/webhook/: api.py
task/: celery_worker.py
