[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template. Using FastAPI, SQLModel, PostgreSQL, Docker, GitHub Actions, automatic HTTPS and more."
authors = [{ name = "Lucas", email = "lucassix.lee@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[all]", "uvicorn[standard]"]
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
maintainers = [{ name = "Lucas", email = "lucassix.lee@gmail.com" }]
keywords = [
    "fastapi",
    "fastapi-template",
    "sqlmodel",
    "postgresql",
    "docker",
    "github actions",
    "automatic https",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
urls = { Repository = "https://github.com/lucas-six/fastapi-template/" }

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.6"]

[tool.setuptools]
py-modules = ["app"]

# [[tool.uv.index]]
# url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
# default = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
extend-safe-fixes = [
    # non-pep585-annotation
    "UP006",
]
select = [
    # flake8-annotations
    "ANN",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes errors
    "F",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
    # Pyflakes warnings
    "W",
]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
exclude = []
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyright]
include = ["app"]
exclude = [
    ".git",
    "**/__pycache__",
    ".venv",
    "**/*.egg-info",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
]
reportGeneralTypeIssues = "none"
reportUnboundVariable = "none"
stubPath = ""
pythonVersion = "3.13"
